--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,11 +2,12 @@
   width: 100vw;
   height: 70px;
   background-color: antiquewhite;
-  display: flex;
-  align-items: center;
+
   padding: 20px;
 }
 
 .nav-icon {
+  text-align: center;
   color: cadetblue;
+  font-size: 26px;
 }
