--- a/src/Components/Playing/Playing.css
+++ b/src/Components/Playing/Playing.css
@@ -16,6 +16,13 @@
   padding: 0 40px;
 }
 
+.playing-time {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  color: #cb6ce6;
+}
+
 .playing-img {
   height: 60px;
   width: 60px;
