--- a/src/Components/Playing/Playing.css
+++ b/src/Components/Playing/Playing.css
@@ -32,7 +32,7 @@
 
 .playing-box {
   display: flex;
-  gap: 20px;
+  gap: 50px;
   align-items: center;
   position: absolute;
   top: 50%;
@@ -42,6 +42,7 @@
 
 .playing-title {
   font-size: 30px;
+  color: beige;
 }
 
 .control-btns {
