--- a/src/Components/SongCard/Song/Song.css
+++ b/src/Components/SongCard/Song/Song.css
@@ -1,13 +1,65 @@
+@media (min-width: 1200px) {
+  .song-card {
+    height: 350px;
+    width: 250px;
+    gap: 30px;
+  }
+
+  .song-img {
+    height: 200px;
+    width: 200px;
+    border-radius: 8px;
+    opacity: 0.9;
+  }
+  .play-btn {
+    height: 40px;
+    width: 40px;
+  }
+}
+@media (max-width: 1199px) and (min-width: 800px) {
+  .song-card {
+    height: 330px;
+    width: 230px;
+    gap: 30px;
+  }
+
+  .song-img {
+    height: 180px;
+    width: 180px;
+    border-radius: 8px;
+    opacity: 0.9;
+  }
+  .play-btn {
+    height: 40px;
+    width: 40px;
+  }
+}
+@media (max-width: 799px) and (min-width: 600px) {
+  .song-card {
+    height: 310px;
+    width: 210px;
+    gap: 30px;
+  }
+
+  .song-img {
+    height: 160px;
+    width: 160px;
+    border-radius: 8px;
+    opacity: 0.9;
+  }
+  .play-btn {
+    height: 35px;
+    width: 35px;
+  }
+}
+
 .song-card {
-  height: 350px;
-  width: 250px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 8px;
   position: relative;
   z-index: 1;
-  gap: 30px;
   padding: 10px 0;
   cursor: pointer;
 }
@@ -30,21 +82,17 @@
   width: 100%;
   transform: translate(-50%, -50%);
   z-index: -1;
-  border-radius: 12px;
+  border-radius: 8px;
 }
 
 .song-img {
-  height: 200px;
-  width: 200px;
   border-radius: 8px;
   opacity: 0.9;
 }
 
-.next-btn,
 .play-btn,
+.next-btn,
 .prev-btn {
-  height: 40px;
-  width: 40px;
   cursor: pointer;
   fill: none;
   border-radius: 50%;
@@ -60,6 +108,6 @@
   z-index: 5;
 }
 
-:where(.next-btn, .play-btn, .prev-btn):hover {
+:where(.play-btn, .next-btn, .prev-btn):hover {
   box-shadow: 0 0 15px 1px #422855;
 }
