--- a/src/Components/SongCard/Song/Song.css
+++ b/src/Components/SongCard/Song/Song.css
@@ -15,6 +15,10 @@
     height: 40px;
     width: 40px;
   }
+
+  .song-name {
+    font-size: 24px;
+  }
 }
 @media (max-width: 1199px) and (min-width: 800px) {
   .song-card {
@@ -50,6 +54,36 @@
   .play-btn {
     height: 35px;
     width: 35px;
+  }
+  .song-name {
+    font-size: 22px;
+  }
+}
+@media (max-width: 600px) {
+  .song-card {
+    height: 270px;
+    width: 170px;
+    gap: 25px;
+  }
+
+  .song-img {
+    height: 140px;
+    width: 140px;
+    border-radius: 8px;
+    opacity: 0.9;
+  }
+  .play-btn {
+    height: 30px;
+    width: 30px;
+  }
+
+  .play-btn svg {
+    height: 25px;
+    width: 25px;
+  }
+
+  .song-name {
+    font-size: 22px;
   }
 }
 
@@ -110,4 +144,10 @@
 
 :where(.play-btn, .next-btn, .prev-btn):hover {
   box-shadow: 0 0 15px 1px #422855;
+}
+
+.song-name {
+  text-align: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(56, 9, 83);
 }
