--- a/src/Components/Playing/Playing.css
+++ b/src/Components/Playing/Playing.css
@@ -1,3 +1,73 @@
+@media (min-width: 1200px) {
+  .playing-sec .play-btn {
+    height: 50px;
+    width: 50px;
+  }
+  .playing-sec .prev-btn {
+    height: 35px;
+    width: 35px;
+  }
+  .playing-sec .next-btn {
+    height: 35px;
+    width: 35px;
+  }
+
+  .playing-sec .prev-btn svg {
+    height: 25px;
+    width: 25px;
+  }
+  .playing-sec .next-btn svg {
+    height: 25px;
+    width: 25px;
+  }
+
+  .playing-box {
+    gap: 20px;
+  }
+  .control-btns {
+    gap: 35px;
+  }
+  .volume {
+    right: 10%;
+  }
+}
+@media (max-width: 1199px) and (min-width: 800px) {
+  .playing-sec .play-btn {
+    height: 50px;
+    width: 50px;
+  }
+  .playing-sec .prev-btn {
+    height: 35px;
+    width: 35px;
+  }
+  .playing-sec .next-btn {
+    height: 35px;
+    width: 35px;
+  }
+
+  .playing-sec .prev-btn svg {
+    height: 25px;
+    width: 25px;
+  }
+  .playing-sec .next-btn svg {
+    height: 25px;
+    width: 25px;
+  }
+
+  .playing-box {
+    gap: 15px;
+  }
+  .control-btns {
+    gap: 30px;
+  }
+  .volume {
+    right: 0%;
+  }
+  .playing-title {
+    font-size: 26px;
+  }
+}
+
 .playing-sec {
   width: 100%;
   height: 100px;
@@ -8,12 +78,6 @@
   bottom: 0;
   z-index: 10;
   opacity: 0.9;
-}
-
-.playing-container {
-  display: flex;
-  gap: 200px;
-  padding: 0 40px;
 }
 
 .playing-time {
@@ -32,7 +96,6 @@
 
 .playing-box {
   display: flex;
-  gap: 50px;
   align-items: center;
   position: absolute;
   top: 50%;
@@ -41,7 +104,6 @@
 }
 
 .playing-title {
-  font-size: 30px;
   color: beige;
 }
 
@@ -51,7 +113,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
-  gap: 50px;
   align-items: center;
   justify-content: center;
 }
@@ -83,7 +144,6 @@
   position: absolute;
   top: 50%;
   border-radius: 12px;
-  right: 10%;
   transform: translate(-50%, -50%);
   cursor: grab;
   -webkit-appearance: none;
