--- a/src/Components/Playing/Playing.css
+++ b/src/Components/Playing/Playing.css
@@ -22,13 +22,25 @@
   }
 
   .playing-box {
-    gap: 20px;
+    gap: 0px;
   }
   .control-btns {
     gap: 35px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   .volume {
     right: 10%;
+    width: 150px;
+  }
+  .playing-img {
+    height: 60px;
+    width: 60px;
+  }
+  .playing-title {
+    font-size: 32px;
+    width: 250px;
   }
 }
 @media (max-width: 1199px) and (min-width: 800px) {
@@ -59,12 +71,116 @@
   }
   .control-btns {
     gap: 30px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   .volume {
     right: 0%;
+    width: 150px;
   }
   .playing-title {
     font-size: 26px;
+    width: 200px;
+  }
+  .playing-img {
+    height: 60px;
+    width: 60px;
+  }
+}
+@media (max-width: 799px) and (min-width: 600px) {
+  .playing-sec .play-btn {
+    height: 50px;
+    width: 50px;
+  }
+  .playing-sec .prev-btn {
+    height: 35px;
+    width: 35px;
+  }
+  .playing-sec .next-btn {
+    height: 35px;
+    width: 35px;
+  }
+
+  .playing-sec .prev-btn svg {
+    height: 25px;
+    width: 25px;
+  }
+  .playing-sec .next-btn svg {
+    height: 25px;
+    width: 25px;
+  }
+
+  .playing-box {
+    gap: 10px;
+  }
+  .control-btns {
+    gap: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .volume {
+    right: 0%;
+    width: 120px;
+  }
+
+  .playing-img {
+    height: 50px;
+    width: 50px;
+  }
+
+  .playing-title {
+    font-size: 22px;
+    width: 130px;
+  }
+}
+
+@media (max-width: 599px) {
+  .volume {
+    display: none;
+  }
+
+  .playing-sec .play-btn {
+    height: 50px;
+    width: 50px;
+  }
+  .playing-sec .prev-btn {
+    height: 35px;
+    width: 35px;
+  }
+  .playing-sec .next-btn {
+    height: 35px;
+    width: 35px;
+  }
+
+  .playing-sec .prev-btn svg {
+    height: 25px;
+    width: 25px;
+  }
+  .playing-sec .next-btn svg {
+    height: 25px;
+    width: 25px;
+  }
+
+  .playing-box {
+    gap: 10px;
+  }
+  .control-btns {
+    gap: 20px;
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+  }
+
+  .playing-img {
+    height: 50px;
+    width: 50px;
+  }
+
+  .playing-title {
+    font-size: 24px;
+    width: 130px;
   }
 }
 
@@ -88,8 +204,6 @@
 }
 
 .playing-img {
-  height: 60px;
-  width: 60px;
   border-radius: 50%;
   animation: linear infinite 8s animation;
 }
@@ -105,13 +219,14 @@
 
 .playing-title {
   color: beige;
+  word-break: break-all;
+  line-height: 1;
+  text-align: center;
 }
 
 .control-btns {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -138,8 +253,6 @@
   z-index: -1;
 }
 .volume {
-  width: 150px;
-
   height: 10px;
   position: absolute;
   top: 50%;
